LP: giustificazione GPL

--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -57,7 +57,7 @@ Alla cortese attenzione dei committenti :
 Con la presente la ditta WebShape intende ufficializzare, in data (data presentazione documenti), la sua partecipazione alla gara di appalto per il capitolato C04 "Software per il disegno grafico in tecnologie web" (in seguito definito "AJAXDRAW"). Il rilascio finale del prodotto e' previsto dall' azienda per la fine del secondo trimestre universitario, indicativamente verso fine Marzo 2009 ed inizio Aprile dello stesso anno. 
 
 \section{Licenza di distribuzione del prodotto} 
-WebShape, dopo un' attenta analisi, ha deciso di adottare per il progetto la licenza GPL. (Qui una persona a caso potrebbe aggiungere il perche' abbiamo scelto GPL)
+WebShape, dopo un' attenta analisi, ha deciso di adottare per il progetto la licenza GPL, in quanto garantisce che il prodotto sia e rimanga liberamente utilizabile, modificabile e distribuibile. Inoltre assicura che eventuali modifiche ad opera di terzi godano anch'esse delle suddette caratteristiche.
 
 \section{Sistema di versionamento dei file} 
 Il sistema di nomenclatura dei file usato da WebShape non prevede l' inserimento della versione attuale del documento nel nome del file. Il sistema di configurazione e versionamento adottato dall' azienda e' tale che la versione visibile sia sempre quella                   piu' aggiornata. Tuttavia solo i documenti che saranno consegnati per le revisioni avranno la versione nel nome del file. 
