Sistemata tabella Rotazione Ruoli interna margini

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -376,36 +376,71 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 \newpage
 
 \subsubsezione{Distribuzione per fase di progetto}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%PRIMA PARTE TABELLA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table}[!h]
 	\begin{center}
 		  \begin{tabular}
 			  {|c|c|c|c|}
 		 \hline
 %%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-			\multicolumn{4}{|c|}{ \textbf{Preventivo rotazione ruoli per fase di progetto} } \\
+			\multicolumn{3}{|c|}{ \textbf{Preventivo rotazione ruoli per fase di progetto} } \\
 			\hline
-			& \multicolumn{3}{|c|}{ \textbf{FASE} } \\
+			& \multicolumn{2}{|c|}{ \textbf{FASE} } \\
 			\hline
-			& \textbf{RR-RPP} & \textbf{RPP-RQ} & \textbf{RQ-RA} \\
+			& \textbf{RR-RPP} & \textbf{RPP-RQ} \\
 			\hline
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-								     %  RR -RPP % RPP-RPD  %  RPD-RQ  % RQ-RA % 
-			Bizzotto Piero & Resp.-Amm.-Progett.  & Analis.-Program.-Verif.   & -   \\
+								     %  RR -RPP % RPP-RQ %  
+			Bizzotto Piero & Resp.-Amm.-Progett.  & Analis.-Program.-Verif. \\
 			\hline
 			Carollo Mirko & Resp.-Amm.-Progett.  & Analis.-Program.-Verif.   \\
 			\hline
-			Cunico Marco & Analis.  & Resp.-Amm.-Progett.-Program.  & Verif.-Amm.   \\
+			Cunico Marco & Analis.  & Resp.-Amm.-Progett.-Program.  \\
 			\hline
-			Dal Bosco Davide & Analis.  & Resp.-Amm.-Progett.-Program.-Verif.  & -   \\
+			Dal Bosco Davide & Analis.  & Resp.-Amm.-Progett.-Program.-Verif.  \\
 			\hline
-			Dissegna Stefano & Analis.  & Resp.-Amm.-Progett.-Program.  & Verif.-Amm.   \\
+			Dissegna Stefano & Analis.  & Resp.-Amm.-Progett.-Program.  \\
 			\hline
-			Geremia Mirco & Resp.-Amm.-Analis.-Verif.  & Progett.-Program.  & Resp.   \\
+			Geremia Mirco & Resp.-Amm.-Analis.-Verif.  & Progett.-Program.  \\
 			\hline
 
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
-	\caption{Preventivo rotazione ruoli per fase di progetto} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+	\caption{Preventivo rotazione ruoli per fase di progetto prima parte} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+	%\label{tab:TabellaRotazRuoli}
+	\end{center}	
+\end{table}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%SECONDA PARTE TABELLLA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{table}[!h]
+	\begin{center}
+		  \begin{tabular}
+			  {|c|c|c|c|}
+		 \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			%%\multicolumn{2}{|c|}{ \textbf{Preventivo rotazione ruoli per fase di progetto} } \\
+			\hline
+			& \multicolumn{1}{|c|}{ \textbf{FASE} } \\
+			\hline
+			& \textbf{RQ-RA} \\
+			\hline
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+								     % RQ-RA % 
+			Bizzotto Piero & -   \\
+			\hline
+			Carollo Mirko & -   \\
+			\hline
+			Cunico Marco & Verif.-Amm.   \\
+			\hline
+			Dal Bosco Davide & -   \\
+			\hline
+			Dissegna Stefano & Verif.-Amm.   \\
+			\hline
+			Geremia Mirco & Resp.   \\
+			\hline
+
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		\end{tabular}
+	\caption{Preventivo rotazione ruoli per fase di progetto seconda parte} %INSERIRE DIDASCALIA - SE NECESSARIA - 
 	\label{tab:TabellaRotazRuoli}
 	\end{center}	
 \end{table}
@@ -468,7 +503,5 @@ Il prodotto finale, come da Requisiti, dovr\`a risultare funzionante sui pi\`u m
 \item \textbf{Funzionalit\`a del prodotto}\\
 Essendo il prodotto finale utilizzato da un qualsiasi tipo di utente finale, \`e necessario prestare attenzione alla presentazione del prodotto, rendendo l'accessibilit\`a per tutte le sue funzioni semplice e immediata.
 \end{itemize}			
-
-da completare\\
 
 \end{document}
