--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -1,11 +1,11 @@
 	\input{../TeX/base} %BASE!!!
 \usepackage{multirow}
 \title{\TITOLODOC}
-\author{Cunico Marco}
+\author{Dal Bosco Davide}
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.7} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{0.8} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -150,6 +150,8 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+          0.8 & 06/12/2008 Modificata la sottosezione Assunzioni Iniziali, corretto errori ortografici, modificata impaginazione dei grafici & Dal Bosco Davide \\
+		 \hline
           0.7 & 05/12/2008 Inserimento Distribuzione Ruoli e Gestione del Piano di Progetto & Cunico Marco \\
           \hline
           0.6 & 05/12/2008 Inserimento Preventivo Rotazione Ruoli per fase di progetto & Cunico Marco \\
@@ -436,7 +438,7 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 %%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\multicolumn{3}{|c|}{ \textbf{Preventivo rotazione ruoli per fase di progetto} } \\
 			\hline
-			& \multicolumn{2}{|c|}{ \textbf{FASE} } \\
+			\textbf{Componente} & \multicolumn{2}{|c|}{ \textbf{FASE} } \\
 			\hline
 			& \textbf{RR-RPP} & \textbf{RPP-RQ} \\
 			\hline
@@ -470,7 +472,7 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 %%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			%%\multicolumn{2}{|c|}{ \textbf{Preventivo rotazione ruoli per fase di progetto} } \\
 			\hline
-			& \multicolumn{1}{|c|}{ \textbf{FASE} } \\
+			\textbf{Componente} & \multicolumn{1}{|c|}{ \textbf{FASE} } \\
 			\hline
 			& \textbf{RQ-RA} \\
 			\hline
@@ -508,7 +510,7 @@ In questa sezione \'e presente l'intera distribuzione del carico di lavoro per m
 %			\multicolumn{3}{|c|}{ \multirow{2}{*}{ FASE RR - RPP } } \\
 			\multicolumn{7}{|c|}{ \textbf{Preventivo carico persona ore} } \\
 			\hline
-			& \multicolumn{6}{|c|}{ \textbf{RUOLO} } \\
+			\textbf{Componente} & \multicolumn{6}{|c|}{ \textbf{RUOLO} } \\
 			\hline
 			& \textbf{Resp.} & \textbf{Amm.} & \textbf{Analis.} & \textbf{Progett.} & \textbf{Program.} & \textbf{Verif.} \\
 			\hline
@@ -543,7 +545,7 @@ nella sezione "Assunzioni Iniziali".
 In questa sezione saranno presi in considerazione i possibili problemi che potrebbero sorgere durante la realizzazione del progetto, sia dal punto di vista della pianificazione delle fasi di lavoro, che da quello di eventuali rischi relativi alla tecnologia usata.\\
 I punti di rischio da noi identificati e valutati sono i seguenti:\\
 \begin{itemize}
-\item \textbf{Rischi inerenti al modello di ciclo di vita evolutivo}\\
+\item \textbf{Rischi inerenti al modello di ciclo di vita incrementale}\\
 \`E molto importante effettuare una corretta scelta delle attivit\`a, da coordinare durante le varie fasi di lavoro.
 \item \textbf{Pianificazione e distribuzione dei ruoli}\\
 Un punto fondamentale al quale bisogna prestare molta attenzione \`e la suddivisione dei ruoli e la sua gestione. Ogni componente dovr\`a assumere tutti i ruoli durante le varie fasi di progetto. Questo pu\`o portare ad una scarsa specializzazione dei membri dell'azienda, ma si tratta di un vincolo didattico indispensabile.
