AR: adattato al glossario

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -713,7 +713,7 @@ per ognuna \`e presente una classificazione per classe di importanza (obbligator
 \subsubsezione{Obbligatori (RAO)}
 \begin{elenconumerato}[\textbf{RAO-}]{\subsubsecindent}
 \item Il prodotto \`e pensato per funzionare su un internet browser.
-\item Il prodotto dovr\`a essere implementato seguendo gli standard del linguaggio di markup HTML 5.
+\item Il prodotto dovr\`a essere implementato seguendo gli standard del \underline{linguaggio di markup} HTML 5.
 \item Il prodotto in particolare dovr\` a utilizzare il tag "canvas" appositamente creato per l'elaborazione del disegno vettoriale sul web.
 \item Il software di supporto per lo sviluppo del prodotto \`e di tipo Open Source e freeware.
 \item Il prodotto realizzato dovr\`a essere pubblicato sul sito "www.sourceforge.net", in conformit\`a con i relativi requisiti di natura Open Source, per favorire la continuit\`a del prodotto risultante.
