inserito il primo incremento

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.8} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{0.9} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -150,6 +150,8 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+          0.9 & 06/12/2008 Corretti errori di sintassi, impaginazione e inserito il primo incremento & Cunico Marco \\
+          \hline
           0.8 & 06/12/2008 Modificata la sottosezione Assunzioni Iniziali, corretto errori ortografici, modificata impaginazione dei grafici & Dal Bosco Davide \\
 		 \hline
           0.7 & 05/12/2008 Inserimento Distribuzione Ruoli e Gestione del Piano di Progetto & Cunico Marco \\
@@ -304,6 +306,30 @@ In questa sottosezione verr\` a il preventivo totale, comprendente i costi e le 
 \includegraphics[width=350pt]{CostiTotali}
 
 \subsezione{Pianificazione economico-temporale RR-RPP}
+All' interno di questa fase avverr\'a la prima iterazione prevista dal modello di ciclo di vita.
+Al termine dell' iterazione verr\'a rilasciato un prototipo che soddisfer\'a i seguenti requisiti:\\
+
+%%\begin{enumerate}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
+\item RFO-1
+\item RFO-2
+\item RFO-3
+\item RFO-4
+\item RFO-5
+\item RFO-6
+\item RFO-7
+\item RFO-8
+\item RFO-9
+\item RFO-10
+\item RFO-11
+\item RFO-12
+\item RFO-13
+\item RFO-14
+\item RFO-15
+\item RFD-1
+\item RFD-2
+\end{elenconumerato}
+
 Preventivo relativo alla fase Revisione dei requisiti-Revisione del progetto preliminare.
 \begin{table}[h]
 	\begin{center}
