aggiunto rfd3 nel primo incremento

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -328,6 +328,7 @@ Al termine dell' iterazione verr\'a rilasciato un prototipo che soddisfer\'a i s
 \item RFO-15
 \item RFD-1
 \item RFD-2
+\item RFD-3
 \end{elenconumerato}
 
 Preventivo relativo alla fase Revisione dei requisiti-Revisione del progetto preliminare.
