NP: sistemata lista distribuzione

--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -122,7 +122,7 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 
 	\begin{elenconumerato}{\normindent}
 		\item WebShape 
-		\item I committenti Conte Renato e Vardanega Tullio in rappresentanza \\  dell'azienda proponente Zucchetti SPA
+	%	\item I committenti Conte Renato e Vardanega Tullio in rappresentanza \\  dell'azienda proponente Zucchetti SPA
 	\end{elenconumerato}
 
 \newpage
