Sistemata struttura glossario

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{0.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Glossario} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -80,7 +80,7 @@ Glossario
 				%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 				\hline
 				%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%		
-				{Pre-RR} & \\
+				{Pre-RR} & Piero Bizzotto \\ & Mirco Geremia\\
 				\hline
 				{RR-RPP} & \\
 				\hline
@@ -105,7 +105,7 @@ Glossario
 			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%
 			\hline
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-			{Pre-RR} &  \\
+			{Pre-RR} &  Stefano Dissegna\\
 			\hline
 			{RR-RPP} & \\
 			\hline
@@ -140,7 +140,9 @@ Glossario
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-    	 	0.0 & 	 04$\slash$12$\slash$2008 Prima bozza & Mirco Geremia \\
+    	 	0.1 &	 06$\slash$12$\slash$2008 Aggiunta termini da AnalisiDeiRequisiti & Piero Bizzotto \\
+    	 	\hline
+    	 	0.0 & 	 04$\slash$12$\slash$2008 Struttura e aggiunta termini da NormeDiProgetto & Mirco Geremia \\
 
 		\hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -153,42 +155,56 @@ Glossario
 \newpage
 
 \section*{C}
+\hypertarget{canvas}{}
 \textbf{Canvas:}
-Canvas \` e una estensione dell'HTML standard che permette il rendering dinamico di immagini bitmap gestibili attraverso un linguaggio di scripting.  Consiste in una regione disegnabile, definita in codice HTML con gli attributi \textit{height} and \textit{width}. Il codice JavaScript pu\`o accedere all'area con un set completo di funzioni per il disegno, simili a quelle comuni ad altre API 2D, permettendo cos\`i la generazione dinamica di disegni.
+Canvas \` e una estensione dell'HTML standard che permette il rendering dinamico di immagini bitmap gestibili attraverso un linguaggio di scripting.  Consiste in una regione disegnabile, definita in codice HTML con gli attributi \textit{height} and \textit{width}. Il codice \hyperlink{javascript}{\underline{JavaScript}} pu\`o accedere all'area con un set completo di funzioni per il disegno, simili a quelle comuni ad altre API 2D, permettendo cos\`i la generazione dinamica di disegni.\\
 
 \section*{E}
-\textbf{ECMAScript}
-\text Si veda JavaScript
+\hypertarget{ecmascript}{}
+\textbf{ECMAScript:}
+\text Si veda \hyperlink{javascript}{\underline{JavaScript}}.\\
 
 \section*{J}
+\hypertarget{javascript}{}
 \textbf{JavaScript:}
-JavaScript(o ECMAScript) \`e un linguaggio di scripting orientato agli oggetti comunemente usato nei siti web. \`E  uno standard ISO.
+JavaScript (o ECMAScript) \`e un linguaggio di scripting orientato agli oggetti comunemente usato nei siti web. \`E  uno standard ISO.\\
 
 \section*{L}
+\hypertarget{latex}{}
 \textbf{\LaTeX:}
 \LaTeX \ \`e un linguaggio di markup usato per la redazione di documentii che permette di gestire in maniera semplice ed automatica la formattazione del testo.\\
 
 \textbf{Linguaggio di markup:}
+\hypertarget{markup}{}
 Un linguaggio di markup \`e un linguaggio che stabilisce delle convenzioni standard e descrive dei meccanismi per la rappresentazione del testo.\\
 
 \section*{O}
+\hypertarget{opensource}{}
 \textbf{OpenSource:}
-Con il termine OpenSource si indica un tipo di licenza software in cui il codice sorgente viene reso disponibile; lo scopo dell'OpneSource \`e quello di favorire la collaborazione tra gli sviluppatori e il progresso del software tramite la condivisione di idee.\\
+Con il termine OpenSource si indica un tipo di licenza software in cui il codice sorgente viene reso disponibile; lo scopo dell'OpenSource \`e quello di favorire la collaborazione tra gli sviluppatori e il progresso del software tramite la condivisione di idee.\\
 
 \section*{P}
+\hypertarget{png}{}
 \textbf{PNG:}
 Il PNG (Portable Network Graphics) \`e un formato di file che permette di memorizzare immagini senza perdere informazioni.\\
 
 \section*{S}
+\hypertarget{svg}{}
 \textbf{SVG:}
 L' SVG (Scalable Vector Graphics) \` indica una tecnologia in grado di visualizzare oggetti di grafica vettoriale e, per questo motivo, di gestire immagini scalabili dimensionalmente.\\
 
 \section*{W}
+\hypertarget{w3c}{}
+\textbf{W3C:}
+Il W3C \`e un'associazione internazionale fondata nel 1994 con lo scopo di migliorare i protocolli ed i linguaggi del Web. Pur non essendo un organismo di standardizzazione, le raccomandazioni fornite dal W3C sono spesso trattate come standard.\\
+
+\hypertarget{wiki}{}
 \textbf{Wiki:}
 Un wiki \`e un sistema che permette di gestire pagine web in maniera collaborativa favorendo la codivisione di informazioni tra gli utenti; in un wiki ognuno pu\`o aggiungere o modificare i contenuti di una pagina attraverso il browser.\\
 
 \section*{X}
+\hypertarget{xml}{}
 \textbf{XML}
-\text Formato estensibile raccomandato dal \textit{W3C} per la rappresentazione di dati semistrutturati.
+\text Formato estensibile raccomandato dal \hyperlink{w3c}{\underline{W3C}} per la rappresentazione di dati semistrutturati.\\
 
 \end{document}
